data/derived/comb/progs/unify/prog6293.ml.out
Characters 54-64:
  x :: clone(n-1);;
       ^^^^^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int list
